# FINESSE_simulating

./: .copier-answers.yml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  EM27_ILS_test1_3_25.sav  README.md  TO_DO_LIST  define_inputs.py  project_setup.md  pyproject.toml
.github/workflows/: ci.yml
IDL_code/: bruker_fft.pro  planck.pro  read_GUI_logfile.pro  read_bruker_int.pro  sort_and_process_em27_output.pro
Python_code_multi/: 0_plot_logger_data.py  1_prepare_individual_interferograms.py  1_prepare_interferograms.py  2_calculate_response_functions.py  3a_calibrate_spectra_in_cycles.py  3b_calibrate_spectra_singles.py  Quick_look.py  calibration_functions_sanjee.py
aux/: EM27_ILS.sav  FORUM_RTTOV_ISRF.txt  K_10_40k.txt
example_UW_output/: EMISSIVITY  REFLECTIVITY  TAPE11  TAPE5  TAPE6
example_input/: emissivity_example.txt  example_cloud_profile.txt  example_cloud_profile2.txt  example_lbldis_profile.txt  example_profile.txt
example_lbldis_output/FINESSE2/: TAPE5  TAPE6  TAPE7  lbldis.param  lbldis_simulation.cdf
example_lbldis_output/FSI/: TAPE5  TAPE6  TAPE7  lbldis.param  lbldis_simulation.cdf
example_lbldis_runfiles/: FINESSE_define_inputs2.py  FINESSE_run_lbldis2.py  FSI_define_inputs.py  FSI_run_lbldis.py  README
example_lblrtm_runfiles/: FINESSE_run_lblrtm.py  FSI_define_inputs.py  FSI_run_lblrtm.py  PREFIRE_run_lblrtm.py  TAFTS_ARIES_run_lblrtm.py
example_output/: TAPE11  TAPE6
example_output/FINESSE/: FINESSE_example_spectrum.txt  TAPE5  TAPE6
example_output/FSI/: EMISSIVITY  FSI_example_spectrum.txt  REFLECTIVITY  TAPE5  TAPE6
example_output/PREFIRE/: PREFIRE_example_spectrum.txt  TAPE5  TAPE6  TAPE7
example_output/TAFTS_ARIES/: ARIES_example_spectrum.txt  TAFTS_example_spectrum.txt  TAPE5  TAPE6
example_runfiles/: FINESSE_define_inputs.py  FINESSE_run_lblrtm.py  FSI_define_inputs.py  FSI_run_lblrtm.py  PREFIRE_define_inputs.py  TAFTS_ARIES_define_inputs.py  TAFTS_ARIES_run_lblrtm.py  define_inputs.py  define_inputs_FINESSE.py  define_inputs_UW.py  run_lblrtm_FINESSE.py  run_lblrtm_UW.py
finesse_simulating/: define_inputs.py  run_lblrtm_FINESSE.py
finesse_simulating/example_output/: TAPE6
finesse_simulating/src/: panel_file.py
lbldis_testing/: FSI_define_inputs.py  FSI_run_lbldis.py  README
src/: __init__.py  apply_ils_functions.py  module_function_list.py  write_tape5.py
src/finesse_processing/: __init__.py  call_lblrtm.py  checks.py  module_function_list.py  my_module.py
src/finesse_simulating/: __init__.py  apply_ils_functions.py  module_function_list.py  panel_file.py  run_read_lblrtm.py  write_tape5.py
src/fir_simulation_wrapper/: FINESSE.py  FSI.py  PREFIRE.py  TAFTS_ARIES.py  __init__.py  apply_ils_functions.py  general_ils_functions.py  panel_file.py  run_read_lblrtm.py  run_read_lblrtm_lbldis.py  write_tape5.py  (+2 more)
tests/: __init__.py  test_example.py
